# fabric-core-api

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  docker-compose.yml.template  docker-entrypoint.sh  env.template  full-backup.sh  full-restore.sh  pyproject.toml  requirements.txt
docs/: README.md  announcements.md  backup-and-restore.md  check-cookie.md  core-api-metrics.md  core-api-pagination.md  core-api-people-details.md  core-api-people.md  core-api-preferences.md  core-api-projects-details.md  core-api-projects.md  core-api-resposne-types.md  core-api-sshkeys-details.md  core-api-status-codes.md  core-api-updates.md  full-backup-and-restore.md  pagination.md  people.md  projects.md  publications.md  singleton.md  sshkeys.md  status-codes.md  storage.md  testbed-info.md  version.md  whoami.md
helper_scripts/: reset-to-clean.sh  update-server-stub.sh
nginx/: default.conf  default.conf.template
server/: core-api.ini  setup.py
server/swagger_server/: __init__.py  __main__.py  api_logger.py  logging.ini  my-unit-test.py
server/swagger_server/controllers/: announcements_controller.py  check_cookie_controller.py  core_api_metrics_controller.py  journey_tracker_controller.py  people_controller.py  projects_controller.py  publications_controller.py  quotas_controller.py  sshkeys_controller.py  storage_controller.py  testbed_info_controller.py  updates_controller.py  version_controller.py  whoami_controller.py
server/swagger_server/database/: db.py  db_comanage_verify.py  db_load.py  db_verify.py
server/versions/: README.md
vouch/: config.template  config.yml.template
(+239 files in other folders)
